data/derived/sp14/progs/unify/prog4371.ml.out
Characters 87-88:
  | h::t -> f h t
                ^
Error: This expression has type ('a -> 'b) list
       but an expression was expected of type 'c -> 'a
